# qq

./: .gitignore  .qq.example  CLAUDE.md  Cargo.toml  README.md  plan.md  release.toml  rustfmt.toml
.claude/agents/: rust-code-critic.md
.claude/commands/: update.md
.github/workflows/: release.yml  test.yml
src/: args.rs  config.rs  logging.rs  main.rs  persona.rs  prompts.rs  provider.rs
src/configs/: config.rs  config_file.rs  config_service.rs  mod.rs  types.rs
src/providers/: helpers.rs  mod.rs  open_router.rs  openai.rs
