[package]
name = "qq"
version = "0.1.1"
edition = "2024"
description = "A fast, minimal command-line tool for querying LLMs"
license-file = "LICENSE"
repository = "https://github.com/grantmegrabyan/qq"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
async-openai = "0.30.1"
chrono = "0.4"
clap = { version = "4.5.52", features = ["derive"] }
derive_builder = "0.20.2"
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spinoff = "0.8.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
